--- a/register.html
+++ b/register.html
@@ -542,10 +542,12 @@
     cursor: pointer;
     text-align: center;
     font-size: 1.1rem;
+    order: 2; /* after text */
   }
   .order-toggle:hover {
     background: #a71d2a;
   }
+
   .category {
     font-size: 0.8rem;
     padding: 0.2rem 0.6rem;
@@ -553,9 +555,11 @@
     min-height: 26px;
     border-radius: 6px;
   }
+
   .item-grid {
     grid-template-columns: repeat(2, 1fr);
     gap: 0.8rem;
+    order: 4; /* cards come after order summary */
   }
 
   .item-card {
@@ -574,7 +578,8 @@
     font-size: 0.9rem;
     margin-bottom: 0.8rem;
   }
-   .quantity-input {
+
+  .quantity-input {
     width: 45px;
     font-size: 0.85rem;
     padding: 0.15rem;
@@ -584,16 +589,7 @@
     padding: 0.4rem 0.8rem;
     border-radius: 6px;
   }
-.quantity-input {
-    width: 45px;
-    font-size: 0.85rem;
-    padding: 0.15rem;
-  }
-  .add-btn {
-    font-size: 0.85rem;
-    padding: 0.4rem 0.8rem;
-    border-radius: 6px;
-  }
+
   #searchBar {
     font-size: 0.85rem;
     padding: 0.25rem 0.5rem;
@@ -602,6 +598,7 @@
   }
 
   aside.order-summary {
+    order: 3; /* comes right after button */
     width: 100%;
     height: auto;
     max-height: 0;
@@ -633,28 +630,18 @@
 
   /* prevent main content from squashing */
   .main-container {
-  display: flex;
-  width: 100%;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
-.order-toggle {
-  order: 2;
-  margin-top: 0.5rem;
-}
-
-aside.order-summary {
-  order: 3;
-}
-
+    display: flex;
+    width: 100%;
+    min-height: 100vh;
+    flex-direction: column;
+  }
 
   main {
     margin-left: 0;
     padding: 1rem;
   }
-
 }
+
   </style>
 </head>
 <body>
