--- a/register.html
+++ b/register.html
@@ -529,6 +529,9 @@
 /* Mobile behavior */
 /* Mobile: collapsible order summary */
 @media (max-width: 768px) {
+  .hamburger {
+    display: block;   /* ✅ show on mobile */
+  }
   .order-toggle {
     display: block !important;
     width: 100%;
