updated hamburger positions

--- a/loyalty.html
+++ b/loyalty.html
@@ -255,7 +255,7 @@
     flex-direction: column;
   }
   main {
-    padding: 1rem;
+    padding: 60px 1rem 1rem; /* top 60px pushes content below hamburger */
     margin-left: 0;
   }
 }
