--- a/market.html
+++ b/market.html
@@ -193,7 +193,7 @@
     flex-direction: column;
   }
   main {
-    padding: 1rem;
+    padding: 60px 1rem 1rem; /* top 60px so content sits below hamburger */
     margin-left: 0;
   }
 }
