--- a/staffmeals.html
+++ b/staffmeals.html
@@ -178,7 +178,7 @@
   }
   main {
     margin-left: 0;
-    padding: 1rem;
+    padding: 60px 1rem 1rem; /* 👈 top padding clears hamburger */
   }
 }
   </style>
