--- a/home.html
+++ b/home.html
@@ -238,7 +238,7 @@
   padding: 6px 12px;
   cursor: pointer;
   position: fixed;
-  top: 70px;
+  top: 15px;
   left: 15px;
   z-index: 3000;
   box-shadow: 0 2px 6px rgba(0,0,0,0.25); /* permanent shadow */
@@ -276,7 +276,7 @@
     flex-direction: column;
   }
   main {
-    padding: 1rem;
+    padding: 100px 1rem 1rem;
     margin-left: 0;
   }
 }
