--- a/home.html
+++ b/home.html
@@ -255,6 +255,11 @@
     display: block; /* show hamburger on small screens */
   }
 
+  announcement-banner {
+    margin-top: 60px; /* push it down below the hamburger */
+
+  }
+
   .sidebar {
     position: fixed;
     top: 0;
