--- a/register.html
+++ b/register.html
@@ -644,8 +644,8 @@
   /* ... your other mobile styles ... */
 
   .hamburger {
-    top: 10px;   /* was 15px */
-    left: 10px;  /* still aligned left */
+    top: 15px;   /* was 15px */
+    left: 15px;  /* still aligned left */
   }
 
   .category-filter {
@@ -654,8 +654,8 @@
 }
 
   main {
+    padding: 100px 1rem 1rem;
     margin-left: 0;
-    padding: 1rem;
   }
 }
 
