--- a/loyalty.html
+++ b/loyalty.html
@@ -258,6 +258,11 @@
     padding: 100px 1rem 1rem; /* top 60px pushes content below hamburger */
     margin-left: 0;
   }
+
+  .main-content {
+    padding: 100px 1rem 1rem; /* top 60px pushes content below hamburger */
+    margin-left: 0;
+  }
 }
 
   </style>
