--- a/register.html
+++ b/register.html
@@ -595,7 +595,7 @@
   <div class="item-card" data-name="Burgershot Bleeder" data-price="85" data-category="Food" data-image="assets/images/bleeder.png">
     <img src="assets/images/bleeder.png" alt="Burgershot Bleeder" />
     <h3>Burgershot Bleeder</h3>
-    <p>$85</p>
+    <p>$100</p>
     <div class="add-controls">
       <input type="number" class="quantity-input" min="1" value="1" />
       <button class="add-btn">Add</button>
@@ -605,7 +605,16 @@
   <div class="item-card" data-name="The Double Shot" data-price="85" data-category="Food" data-image="assets/images/doubleshot.png">
     <img src="assets/images/doubleshot.png" alt="The Double Shot" />
     <h3>The Double Shot</h3>
-    <p>$85</p>
+    <p>$100</p>
+    <div class="add-controls">
+      <input type="number" class="quantity-input" min="1" value="1" />
+      <button class="add-btn">Add</button>
+    </div>
+    </div>
+    <div class="item-card" data-name="Heart Stopper Burger" data-price="150" data-category="Food" data-image="assets/images/bleeder.png">
+    <img src="assets/images/heartstopper.png" alt="Heart Stopper Burger" />
+    <h3>Heart Stopper Burger</h3>
+    <p>$150</p>
     <div class="add-controls">
       <input type="number" class="quantity-input" min="1" value="1" />
       <button class="add-btn">Add</button>
@@ -615,37 +624,37 @@
   <div class="item-card" data-name="Burgershot Soda" data-price="50" data-category="Drinks" data-image="assets/images/soda.png">
     <img src="assets/images/soda.png" alt="Burgershot Soda" />
     <h3>Burgershot Soda</h3>
-    <p>$50</p>
+    <p>$75</p>
     <div class="add-controls">
       <input type="number" class="quantity-input" min="1" value="1" />
       <button class="add-btn">Add</button>
     </div>
   </div>
   <!-- Fries -->
-  <div class="item-card" data-name="Fries" data-price="50" data-category="Food" data-image="assets/images/fries.png">
+  <div class="item-card" data-name="Fries" data-price="85" data-category="Food" data-image="assets/images/fries.png">
     <img src="assets/images/fries.png" alt="Fries" />
     <h3>Fries</h3>
-    <p>$50</p>
+    <p>$85</p>
     <div class="add-controls">
       <input type="number" class="quantity-input" min="1" value="1" />
       <button class="add-btn">Add</button>
     </div>
   </div>
   <!-- Rim Job -->
-  <div class="item-card" data-name="Rim Job" data-price="50" data-category="Desserts" data-image="assets/images/rimjob.png">
+  <div class="item-card" data-name="Rim Job" data-price="75" data-category="Desserts" data-image="assets/images/rimjob.png">
     <img src="assets/images/rimjob.png" alt="Rim Job" />
     <h3>Rim Job</h3>
-    <p>$50</p>
+    <p>$65</p>
     <div class="add-controls">
       <input type="number" class="quantity-input" min="1" value="1" />
       <button class="add-btn">Add</button>
     </div>
   </div>
   <!-- Cream Pie -->
-  <div class="item-card" data-name="Cream Pie" data-price="50" data-category="Desserts" data-image="assets/images/creampie.png">
+  <div class="item-card" data-name="Cream Pie" data-price="75" data-category="Desserts" data-image="assets/images/creampie.png">
     <img src="assets/images/creampie.png" alt="Cream Pie" />
     <h3>Cream Pie</h3>
-    <p>$50</p>
+    <p>$65</p>
     <div class="add-controls">
       <input type="number" class="quantity-input" min="1" value="1" />
       <button class="add-btn">Add</button>
