--- a/market.html
+++ b/market.html
@@ -261,7 +261,7 @@
           <td class="suggested"></td>
         </tr>
          <tr>
-          <td>Sugar Pack</td>
+          <td>Sugar Sack</td>
           <td><input type="number" min="0" value="0" data-ingredient="sugar" class="pack-qty" /></td>
           <td><input type="number" min="0" step="0.01" value="0" class="price-per-pack" /></td>
           <td class="subtotal">$0.00</td>
