--- a/home.html
+++ b/home.html
@@ -311,6 +311,7 @@
       <div class="announcement-banner" aria-live="polite" aria-atomic="true">
   <span>
     🚨 Grand Opening soon! 🍔🔥 &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp; 
+    🚫 Tyrod stop spitting in the burgers. &nbsp;&nbsp;|&nbsp;&nbsp;
     ✅ Remember to clock in/out at start of shift and end of shift! &nbsp;&nbsp;|&nbsp;&nbsp;
     ⏰ Clock in and out on emails for weekly bonuses &nbsp;&nbsp;|&nbsp;&nbsp;
     💸 Double-check invoices before sending &nbsp;&nbsp;|&nbsp;&nbsp;
